<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/hanchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/hanchor"
        android:textColor="@color/main_blue"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/image_onboarding"
        android:layout_width="328dp"
        android:layout_height="328dp"
        android:src="@drawable/first_onboarding_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hanchor"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/onboarding_images" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_onboarding"
        android:text="@string/first_onboarding_ttle"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/main_blue"
        android:gravity="center"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_onboarding_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_onboarding_title"
        android:text="@string/first_onboarding_description"
        android:textSize="16sp"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:translationY="-0.12sp"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>