<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.main.fragments.home.affirmations.display_affirmation.DisplayAffirmationFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/app_bar"
           android:layout_width="match_parent"
           android:layout_height="150dp"
           android:background="@color/primary_color"
           android:orientation="horizontal"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">

           <ImageView
               android:id="@+id/navigate_up"
               android:layout_width="wrap_content"
               android:layout_height="56dp"
               android:layout_marginStart="24dp"
               app:tint="@color/white"
               android:padding="10dp"
               android:src="@drawable/ic_back"
               app:layout_constraintBottom_toBottomOf="@id/placeholder_title"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/placeholder_title"
               style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
               android:layout_width="wrap_content"
               android:layout_height="56dp"
               android:layout_marginStart="16dp"
               android:gravity="center"
               android:text="@string/my_affirmations"
               android:textColor="@color/white"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent" />

           <TextView
               android:id="@+id/title_affirmation"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:gravity="center"
               android:textSize="24sp"
               android:textStyle="bold"
               android:fontFamily="@font/inter"
               android:layout_marginTop="25dp"
               android:text="@string/prosperity"
               android:textColor="@color/white"
               app:layout_constraintTop_toBottomOf="@id/placeholder_title"
               app:layout_constraintStart_toStartOf="parent" />

           <TextView
               android:id="@+id/size"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="18dp"
               android:gravity="center"
               android:layout_marginTop="3dp"
               android:textSize="15sp"
               android:fontFamily="@font/inter"
               android:text="@string/six"
               android:textColor="@color/white"
               app:layout_constraintTop_toBottomOf="@id/title_affirmation"
               app:layout_constraintStart_toStartOf="parent" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="5dp"
               android:gravity="center"
               android:textSize="15sp"
               android:layout_marginTop="3dp"
               android:fontFamily="@font/inter"
               android:text="@string/affirmations"
               android:textColor="@color/white"
               app:layout_constraintTop_toBottomOf="@id/title_affirmation"
               app:layout_constraintStart_toEndOf="@id/size" />

       </androidx.constraintlayout.widget.ConstraintLayout>

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recycler_view"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           app:layout_constraintTop_toBottomOf="@id/app_bar"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           tools:listitem="@layout/affirmation"/>

       <TextView
           android:id="@+id/empty_affirmation"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/inter"
           android:gravity="center"
           android:text="@string/add_affirmation"
           android:textColor="#929292"
           android:textSize="16sp"
           android:visibility="gone"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <ImageView
           android:id="@+id/fab"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginEnd="24dp"
           android:layout_marginBottom="24dp"
           android:contentDescription="@string/fab"
           android:elevation="10dp"
           android:src="@drawable/ic_fab"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent" />

   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>